--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8">
     <title>Scottish Munros</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great%7CJosefin+Slab" rel="stylesheet">
     <script src="js/bundle.js">
     </script>
-  </head>
+  </head><main>
   <body>
     <header>
       <h1>Scottish Munros</h1>
@@ -14,5 +15,5 @@
     <section id="hills">
 
     </section>
-  </body>
+  </body></main>
 </html>
